--- a/docs/FCC.tex
+++ b/docs/FCC.tex
@@ -8,11 +8,14 @@
 %% Sets page size and margins
 \usepackage[a4paper,top=3cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
-%% Useful packages
+%% Useful packages 
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
+\usepackage[ampersand]{easylist}
+\ListProperties(Hide=100, Hang=true, Progressive=3ex, Style*=$\bullet$ ,
+Style2*=-- ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
 
 \title{FCC Documentation}
 \author{Daniel Deutsch}
@@ -24,73 +27,88 @@
 Main points discussed at our FCC Meeting. Written in LaTex!
 \end{abstract}
 
-\section{Introduction}
+\section{Objectives and Values of the FCC Meetup}
+Connecting people with similar ambitions in real life and provide a platform for exchange and improvement
 
-Your introduction goes here! Some examples of commonly used commands and features are listed below, to help you get started. If you have a question, please use the help menu (``?'') on the top bar to search for help or ask us a question.
 
-\section{Some examples to get started}
+\section{Subject}
+FCC - Programming, web development enthusiasts from beginner to expert.
 
-\subsection{How to include Figures}
+\section{Team}
+\begin{itemize}
+\item Robert as founder and host
+\item Daniel and Lukas as co-host
+\end{itemize}
 
-First you have to upload the image file from your computer using the upload link the project menu. Then use the includegraphics command to include it in your document. Use the figure environment and the caption command to add a number and a caption to your figure. See the code for Figure \ref{fig:frog} in this section for an example.
+\section{Basics}
+\begin{itemize}
+\item Location: Coworking spaces, that provide space for free. (eg Sector5)
+\item Timescheduling: Reconciliation between the hosts and scheduled between other development events. Also dependent on availability of the provided space.
+\end{itemize}
+
+\section{Online Communication}
+\begin{itemize}
+\item meetup.com - for setting framework and information
+\item facebook - for nourishing community and provide information
+\item twitter - recent updates in the community
+\end{itemize}
+
+\section{Promoting Events}
+\begin{itemize}
+\item Mail on meetup.com?
+\item Posts in Social Media
+\end{itemize}
+
+\section{Program}
+\begin{itemize}
+\item Showcase
+    * A person guiding the audience through a codebase they are currently working on.
+\item Discussion Circle
+    * Setting different topics and letting the audience discuss.
+\item Presentations
+    * Different topics with following QA
+\item Coding Sessions
+    * Mob Sessions
+    * FCC Codes
+    * Other small Algorithms
+\end{itemize}
+
+\section{Sponsors}
+Always open and on the search for sponsors. Easier when we have a community established.
+
+\section{Checklist at the Event}
+\begin{easylist}
+& Before the Meetup
+&& Come 30–45 min early and introduce yourself to the location host
+&& Make sure it’s obvious to find the location or put up navigational signs
+&& If you have a co-organiser, one of you should be welcoming attendees
+&& Setup the location (stage, chairs)
+&& Test the projector
+&& sync with speakers who wants to go first
+&& prepare a short slide deck with the schedule and the logos of the sponsors
+&& let the sponsors speak for 2–3 minutes
+
+& During the Meetup
+&& in a smaller group let everyone introduce themselves to connect (start with yourself to lead by example)
+&& make sure one of your co-organisers or you moderate the event
+&& have fun and enjoy
+
+& After the Meetup
+&& after the last talk thank everybody for coming and how long they can stay
+&& clean up the location
+&& personally thank the location host
+\end{easylist}
+
 
 \begin{figure}
 \centering
-\includegraphics[width=0.3\textwidth]{frog.jpg}
-\caption{\label{fig:frog}This frog was uploaded via the project menu.}
+\includegraphics[width=0.3\textwidth]{graph_fcc.jpeg}
+\caption{\label{fig:graph_fcc}Current Statistic of Memebers}
 \end{figure}
 
-\subsection{How to add Comments}
-
-Comments can be added to your project by clicking on the comment icon in the toolbar above. % * <john.hammersley@gmail.com> 2016-07-03T09:54:16.211Z:
-%
-% Here's an example comment!
-%
-To reply to a comment, simply click the reply button in the lower right corner of the comment, and you can close them when you're done.
-
-Comments can also be added to the margins of the compiled PDF using the todo command\todo{Here's a comment in the margin!}, as shown in the example on the right. You can also add inline comments:
+\section{ToDo}
 
 \todo[inline, color=green!40]{This is an inline comment.}
-
-\subsection{How to add Tables}
-
-Use the table and tabular commands for basic tables --- see Table~\ref{tab:widgets}, for example.
-
-\begin{table}
-\centering
-\begin{tabular}{l|r}
-Item & Quantity \\\hline
-Widgets & 42 \\
-Gadgets & 13
-\end{tabular}
-\caption{\label{tab:widgets}An example table.}
-\end{table}
-
-\subsection{How to write Mathematics}
-
-\LaTeX{} is great at typesetting mathematics. Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
-\[S_n = \frac{X_1 + X_2 + \cdots + X_n}{n}
-      = \frac{1}{n}\sum_{i}^{n} X_i\]
-denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$.
-
-
-\subsection{How to create Sections and Subsections}
-
-Use section and subsections to organize your document. Simply use the section and subsection buttons in the toolbar to create them, and we'll handle all the formatting and numbering automatically.
-
-\subsection{How to add Lists}
-
-You can make lists with automatic numbering \dots
-
-\begin{enumerate}
-\item Like this,
-\item and like this.
-\end{enumerate}
-\dots or bullet points \dots
-\begin{itemize}
-\item Like this,
-\item and like this.
-\end{itemize}
 
 \subsection{How to add Citations and a References List}
 
