update, delete unnecessary points

--- a/docs/FCC.tex
+++ b/docs/FCC.tex
@@ -8,7 +8,7 @@
 %% Sets page size and margins
 \usepackage[a4paper,top=3cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
-%% Useful packages 
+%% Useful packages
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
@@ -24,7 +24,7 @@ Style2*=-- ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
 \maketitle
 
 \begin{abstract}
-Main points discussed at our FCC Meeting. Written in LaTex!
+My documentation and proposals for the FCC Meetup Vienna. Written in LaTex!
 \end{abstract}
 
 \section{Objectives and Values of the FCC Meetup}
@@ -108,18 +108,26 @@ Always open and on the search for sponsors. Easier when we have a community esta
 
 \section{ToDo}
 
-\todo[inline, color=green!40]{This is an inline comment.}
+\todo[inline, color=green!40]{
+1. Set scope of duties for each co hosts.
+2. Whats our current booking status?
+3. Provide draft for monthly meetup.
+4. Create a special FCC Vienna Image used for logos etc. (Maybe find designer if necessary - simple banner and logo)
+5. Establish a quarterly meeting between hosts to analyze past meetings and set new standards for future meetups.
+6. Refactor Github Repo ( Manage Team abilities, provide documents of meetups)
+7. Revaluate Meetup.com settings
+8. Maybe develop a facebook/twitter strategy?
+9. Establish Feedback loop from visitors!!!!!!!!
+}
 
-\subsection{How to add Citations and a References List}
-
-You can upload a \verb|.bib| file containing your BibTeX entries, created with JabRef; or import your \href{https://www.overleaf.com/blog/184}{Mendeley}, CiteULike or Zotero library as a \verb|.bib| file. You can then cite entries from it, like this: \cite{greenwade93}. Just remember to specify a bibliography style, as well as the filename of the \verb|.bib|.
-
-You can find a \href{https://www.overleaf.com/help/97-how-to-include-a-bibliography-using-bibtex}{video tutorial here} to learn more about BibTeX.
-
-We hope you find Overleaf useful, and please let us know if you have any feedback using the help menu above --- or use the contact form at \url{https://www.overleaf.com/contact}!
-
-\bibliographystyle{alpha}
-\bibliography{sample}
+\section{Ideas for the Meetup in February}
+\begin{easylist}
+& Introduction
+& Talk about FCC - Maybe Presentation and Overview over FCC
+& Discussion Circle/Programming
+& Feedback
+& Additional: Moderating the Event!
+\end{easylist}
 
 \end{document}
 % * <ddeutsch1@gmx.at> 2017-01-22T16:35:13.731Z:
