--- a/docs/FCC.tex
+++ b/docs/FCC.tex
@@ -60,18 +60,18 @@ FCC - Programming, web development enthusiasts from beginner to expert.
 \end{itemize}
 
 \section{Program}
-\begin{itemize}
-\item Showcase
-    * A person guiding the audience through a codebase they are currently working on.
-\item Discussion Circle
-    * Setting different topics and letting the audience discuss.
-\item Presentations
-    * Different topics with following QA
-\item Coding Sessions
-    * Mob Sessions
-    * FCC Codes
-    * Other small Algorithms
-\end{itemize}
+\begin{easylist}
+& Showcase
+  && A person guiding the audience through a codebase they are currently working on.
+& Discussion Circle
+  && Setting different topics and letting the audience discuss.
+& Presentations
+  && Different topics with following QA
+& Coding Sessions
+  && Mob Sessions
+  && FCC Codes
+  && Other small Algorithms
+\end{easylist}
 
 \section{Sponsors}
 Always open and on the search for sponsors. Easier when we have a community established.
@@ -99,7 +99,6 @@ Always open and on the search for sponsors. Easier when we have a community esta
 && personally thank the location host
 \end{easylist}
 
-
 \begin{figure}
 \centering
 \includegraphics[width=0.3\textwidth]{graph_fcc.jpeg}
@@ -107,18 +106,19 @@ Always open and on the search for sponsors. Easier when we have a community esta
 \end{figure}
 
 \section{ToDo}
+\begin{enumerate}
+\item Set scope of duties for each co hosts.
+\item Whats our current booking status?
+\item Provide draft for monthly meetup.
+\item Create a special FCC Vienna Image used for logos etc. (Maybe find designer if necessary - simple banner and logo)
+\item Establish a quarterly meeting between hosts to analyze past meetings and set new standards for future meetups.
+\item Refactor Github Repo ( Manage Team abilities, provide documents of meetups)
+\item Revaluate Meetup.com settings
+\item Maybe develop a facebook/twitter strategy?
+\item Establish Feedback loop from visitors!!!!!!!!
+\end{enumerate}
 
-\todo[inline, color=green!40]{
-1. Set scope of duties for each co hosts.
-2. Whats our current booking status?
-3. Provide draft for monthly meetup.
-4. Create a special FCC Vienna Image used for logos etc. (Maybe find designer if necessary - simple banner and logo)
-5. Establish a quarterly meeting between hosts to analyze past meetings and set new standards for future meetups.
-6. Refactor Github Repo ( Manage Team abilities, provide documents of meetups)
-7. Revaluate Meetup.com settings
-8. Maybe develop a facebook/twitter strategy?
-9. Establish Feedback loop from visitors!!!!!!!!
-}
+
 
 \section{Ideas for the Meetup in February}
 \begin{easylist}
